[tool.poetry]
name = "livepostprocessing"
version = "0.2.0"
description = "Application to run post-processing on images from BELLA HTU Scans."
authors = ["Reinier van Mourik <reinier.vanmourik@tausystems.com>"]
readme = "README.md"
packages = [{include = "livepostprocessing"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

# numerical
pandas = "^2.0"
numpy = "^1.25.0"
Pint = ">=0.18,<=0.22"

# file system
watchdog = "^3.0.0"

# gui
wxPython = "^4.2.1"
docstring-parser = "^0.15"

# image
scikit-image = "^0.21"
pypng = "^0.20220715.0"
imageio = "^2.31.1"

# our libraries
ImageAnalysis = { path = "../ImageAnalysis", develop = true }
nptdms = "^1.9.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
spyder-kernels = "^2.4.3"
matplotlib = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
