[tool.poetry]
name = "phasicsdensity"
version = "0.1.0"
description = ""
authors = ["TAU-Reinier <reinier.vanmourik@tausystems.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.2"
scipy = "^1.11.1"
pint = "^0.22"
scikit-image = "^0.21.0"
pyabel = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
