[tool.poetry]
name = "phasicsdensity"
version = "0.1.0"
description = ""
authors = ["Reinier van Mourik <reinier.vanmourik@tausystems.com>"]
readme = "README.md"
packages = [{include = "phasicsdensity"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.25.2"
scipy = "^1.11.1"
Pint = "0.22"
scikit-image = "^0.21.0"
pyabel = "^0.9.0"

[tool.poetry.group.dev.dependencies]
spyder-kernels = ">=2.4.0,<2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
