[tool.poetry]
name = "phasicsdensity"
version = "0.1.0"
description = ""
authors = ["Reinier van Mourik <reinier.vanmourik@tausystems.com>"]
readme = "README.md"
packages = [{include = "phasicsdensity"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21"
scipy = "^1.7"
Pint = ">=0.18,<=0.22"
scikit-image = ">=0.19,<1.0"
pyabel = ">=0.9,<1.0"

[tool.poetry.group.dev.dependencies]
spyder-kernels = ">=2.4.0,<2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
