[tool.poetry]
name = "scananalysis"
version = "0.1.0"
description = "Modules for performing analyses routines on full scans"
authors = ["Christopher Doss <CEDoss@lbl.gov>"]
readme = "README.md"
packages = [{include = "scan_analysis"},
            {include = "live_watch"},
            {include = "calibrations"},
            {include = "multiscan_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9 <3.11"
ImageAnalysis = { path = "../ImageAnalysis", develop = true }
geecs-pythonapi = {path = "../GEECS-PythonAPI", develop = true}
pyyaml = "^6.0.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
