# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = khzwave
version = 0.0.1
author = Joshua Einstein-Curtis
author_email = joshec@radiasoft.net
url = https://github.com/radiasoft/khzwave_python
description = Python code associated with the khzwave project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
#license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/radiasoft/khzwave_python/issues
    # Changelog = https://github.com/radiasoft/khzwave_python/blob/master/CHANGELOG.md

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
package_dir =
    = src
packages = find:

# setup_requires =
#     setuptools >= 38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    numpy
    pyzmq

[options.packages.find]
where=src

[options.extras_require]
docs = pdoc3
deps = pydeps

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
