[tool.poetry]
name = "live-watch-gui"
version = "0.1.0"
description = "PyQt5 GUI for configuring and launching LiveWatch scan analysis"
authors = ["GEECS Team"]
readme = "README.md"
packages = [{include = "LiveWatchGUI", from = ".."}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PyQt5 = {version = "^5.15.9", markers = "sys_platform == 'win32'"}
pyqt5-tools = {version = "^5.15.9.3.3", markers = "sys_platform == 'win32'"}
scananalysis = {path = "..", develop = true}
geecs_data_utils = {path = "../../GEECS-Data-Utils", develop = true}
LogMaker4GoogleDocs = {path = "../../LogMaker4GoogleDocs", develop = true}
requests = "^2.28.0"

[tool.poetry.scripts]
live-watch-gui = "LiveWatchGUI.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
