[tool.poetry]
name = "scanner-gui-scananalysis-tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pytest = "^8.3.4"

GEECS-Scanner_GUI = { path = "../../GEECS-Scanner-GUI", develop = true }
ScanAnalysis = { path = "../../ScanAnalysis", develop = true }
pytest-qt = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
